[FIX] Improve rbox title appearance (remove gap and/or border between title and data divs).
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/trunk@42453 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/coelesce.css
+++ b/styles/coelesce.css
@@ -806,7 +806,7 @@ img.flipmodimage:hover {
 }
 
 .rbox-title {
-	margin-bottom: -.35em;
+	margin-bottom: -.4em;
 	border: 1px solid #4a6a90;
 	border-bottom: transparent;
 }
