--- a/styles/snow.css
+++ b/styles/snow.css
@@ -477,7 +477,7 @@ h3.box-title {
 .rbox-data {background: #e7f2f4}
 
 .rbox-title {
-	margin-bottom: -.4em;
+	margin-bottom: -.45em;
 }
 
 .simplebox {
